layout bug when username is long (close #345)

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -199,7 +199,7 @@ video {
     position: absolute;
     top: 0;
     right: 0;
-    width: 170px;
+    min-width: 170px;
     
     background-color: rgba(120, 120, 120, 0.1);
     color: #ffffff;
